--- a/templates/administration/login.html
+++ b/templates/administration/login.html
@@ -58,7 +58,9 @@
         <h1>LOGIN</h1>
        <input type="text" name="Username" placeholder="enter your username"><br><br>
        <input type="password" name="Password" placeholder="enter your password"><br><br>
-       <button>Submit</button>
+    <p>New User?</p>
+    <button type="submit">LOGIN</button>
+    <button onclick="window.location='/register'">REGISTER</button>
     </form>
 </body>
 </html>
