--- a/templates/administration/govt_policy.html
+++ b/templates/administration/govt_policy.html
@@ -4,20 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>govt policy</title>
-    <style>
-        body{
-            display: flex;
-             justify-content: center;  
-             height: 100vh;
-             /* align-items:center ; */
-        }
-    </style>
 </head>
 <body>
-         <form action="">
+    <table border="1"  method="post" enctype="multipart/form-data">
+            {% csrf_token %}
         <h1>ADD & MANAGE GOVERNMENT POLICIES</h1>
-            <label>POLICY NAME:</label><input type="text"><br><br>
-            <label>FILE:</label><input type="text" placeholder="choose your file "><br><br>          <button>SUBMIT</button><br>
-         </form>
+        <br>
+           <tr> 
+            <th>POLICY NAME</th>
+            <th>FILE</th>
+            <th><button><a href="">+</button></th>
+           </tr>
+           <tr>
+                            <td><input type="text" name="PolicyName"></td>
+                            <td><input type="file" placeholder="choose your file" name="file"></td>
+                            <td><button>Delete</button></td>
+
+            </tr>
+         </table>
 </body>
 </html>
