--- a/templates/administration/admin_home.html
+++ b/templates/administration/admin_home.html
@@ -116,7 +116,7 @@
     <a href="/manage_doctors">Doctors</a>
     <a href="/view_patients">Patients</a>
     <a href="/verify_pharmacist">Pharmacists</a>
-    <a href="/govt_policy">Government Policies</a>
+    <a href="/view_govt">Government Policies</a>
     <a href="/view_review">Reviews</a>
     <a href="/logout">Logout</a>
   </div>
