--- a/templates/administration/view_review.html
+++ b/templates/administration/view_review.html
@@ -23,13 +23,15 @@
             <th>COMMENT</th>
             <th>RATING</th>
         </tr>
+        {% for i in review %}
         <tr>
-            <td>1</td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
+            <td>{{ forloop.counter }}</td>
+            <td>{{ i.user_id.Name }}</td>
+            <td>{{ i.doc_name.Name }}</td>
+            <td>{{ i.comment }}</td>
+            <td>{{ i.rating }}</td>
         </tr>
+        {% endfor %}
     </table>
 </body>
 </html>
