--- a/templates/Doctor/doctor_home.html
+++ b/templates/Doctor/doctor_home.html
@@ -63,15 +63,12 @@
   </header>
 
   <nav>
-    <a href="{% url 'view_appointment' %}">View Appointments</a>
-    <a href="{% url 'manage_appointments' %}">Manage Appointments</a>
-    <a href ="{% url 'view_prescription' %}">View Prescriptions</a>
-    <a href="{% url 'manage_prescription' %}">Manage Prescriptions</a>
-    <a href="#">Patient Records</a>
-    <a href="#">Lab Results</a>
+    <a href="{% url 'view_appointment' %}">Appointments</a>
+    <a href ="{% url 'view_prescription' %}">Prescriptions</a>
     <a href="{% url 'add_post' %}">Add Post</a>
     <a href="{% url 'view_rating' %}">Ratings</a>
     <a href="{% url 'send_notification' %}">Notification</a>
+     <a href="#">Patient Records</a>
     <a href="#">Logout</a>
   </nav>
 
