--- a/templates/Doctor/view_appointment.html
+++ b/templates/Doctor/view_appointment.html
@@ -21,6 +21,8 @@
             <th>USER ID</th>
             <th>DATE</th>
             <th>TOKEN</th>
+            <th><a href="#">+</a></th>
+
             
         </tr>
         {% for i in appointments %}
@@ -29,6 +31,7 @@
             <td>{{ i.Userid.Name }}</td>
             <td>{{ i.Date }}</td>
             <td>{{ i.Token }}</td>
+            <td><button value="accept">Accept</button><button value="reject">Reject</button></td>
         </tr>
         {% endfor %}
     </table>
