--- a/templates/administration/login.html
+++ b/templates/administration/login.html
@@ -60,7 +60,7 @@
        <input type="password" name="Password" placeholder="enter your password"><br><br>
     <p>New User?</p>
     <button type="submit">LOGIN</button>
-    <button onclick="window.location='/register'">REGISTER</button>
+    <button type="button" onclick="window.location='/Register'">REGISTER</button>
     </form>
 </body>
 </html>
