--- a/templates/Doctor/add_post.html
+++ b/templates/Doctor/add_post.html
@@ -3,29 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Medical Related Posts</title>
-<style>
-    body {
-        display: flex;
-        text-align: center;
-        align-items: center;
-        height: 100vh;
-        justify-content: center;
-    }
-    button {
-        border: 2px solid black;
-        border-radius: 10px;
-    }
-</style>
+    <title>Add Medical Related Posts</title>
+    <style>
+        body {
+            justify-content: center;
+            height: 100vh;
+            display: flex;
+            align-items: center;
+        }
+         h1 {
+            font-family: fantasy;
+            font-display: initial;
+            letter-spacing: 1mm;
+        }
+     </style>
 </head>
 <body>
-<form action="">
-    <h1>MEDICAL RELATED POST'S</h1>
-     DOC_ID :<input type="text"><br></br>
-     DEPT : <input type="text"><br></br>
-     IMAGE : <input type="image"><br></br>
-     DESCRIPTIONS : <input type="text"><br></br>
-     <button>SUBMIT</button>
-</form>
+    <form method="post" enctype="multipart/form-data">
+        {% csrf_token %}
+        <h1 style="text-align: center;">ADD</h1> <br>
+        TITLE : <input type="text" name="Title"> <br></br>
+        IMAGE : <input type="file" name="image"> <br></br>
+        DESCRIPTIONS : <input type="text" name="Description"> <br></br> 
+        DATE : <input type="date" name="Createdate"> <br></br>
+        <input type="submit" value="SUBMIT">
+        
+    </form>
 </body>
 </html>
