--- a/templates/Doctor/doctor_home.html
+++ b/templates/Doctor/doctor_home.html
@@ -65,9 +65,9 @@
   <nav>
     <a href="{% url 'view_appointment' %}">Appointments</a>
     <a href ="{% url 'view_prescription' %}">Prescriptions</a>
-    <a href="{% url 'add_post' %}">Add Post</a>
+    <a href="{% url 'view_post' %}">Post</a>
     <a href="{% url 'view_rating' %}">Ratings</a>
-    <a href="{% url 'send_notification' %}">Notification</a>
+    <a href="{% url 'view_notification' %}">Notification</a>
      <a href="#">Patient Records</a>
     <a href="#">Logout</a>
   </nav>
