--- a/templates/Doctor/send_notification.html
+++ b/templates/Doctor/send_notification.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=>, initial-scale=1.0">
-    <title>Document</title>
+    <title>Send Notification</title>
     <style>
         body {
             text-align: center;
@@ -20,11 +20,20 @@
     </style>
 </head>
 <body>
-    <form action="">
+    <form method="post">
+        {% csrf_token %}
             <h1>SEND NOTIFICATIONS</h1>
-            <h3>TITLE : <input type="text"><br></h3>
-            <h3>TEXTBOX : <input type="text"><br></h3>
+            USERNAME : <select name="Userid">
+            <option value="null">-- please select a user --</option>
+            {% for i in users %}
+            <option value="{{ i.Userid.id }}">{{ i.Userid.Name }}</option>
+            {% endfor %}
+        </select></br>
+            <h3>TITLE : <input type="text" name="Title" ><br></h3>
+            <h3>TEXTBOX : <input type="text" name="Description"><br></h3>
+            <h3>DATE : <input type="date" name="Date"><br></h3>
             <button>SEND</button>
     </form>
+
 </body>
 </html>
