--- a/templates/administration/view_review.html
+++ b/templates/administration/view_review.html
@@ -23,7 +23,7 @@
             <th>COMMENT</th>
             <th>RATING</th>
         </tr>
-        {% for i in review %}
+        {% for i in rating %}
         <tr>
             <td>{{ forloop.counter }}</td>
             <td>{{ i.user_id.Name }}</td>
