--- a/templates/Doctor/view_prescription.html
+++ b/templates/Doctor/view_prescription.html
@@ -11,8 +11,8 @@
 <body>
     <table border="1">
 <tr>
-       VIEW PRESCRIPTIONS
-       <th>SI/no</th>
+        <h1>VIEW PRESCRIPTIONS</h1>
+       <th>SI NO</th>
         <th>USERNAME</th>
         <th>PRESCRIPTION</th>
         <th>DATE</th>
