--- a/templates/Doctor/send_notification.html
+++ b/templates/Doctor/send_notification.html
@@ -25,14 +25,14 @@
             <h1>SEND NOTIFICATIONS</h1>
             USERNAME : <select name="Userid">
             <option value="null">-- please select a user --</option>
-            {% for i in users %}
+            {% for i in user_obj %}
             <option value="{{ i.Userid.id }}">{{ i.Userid.Name }}</option>
             {% endfor %}
         </select></br>
             <h3>TITLE : <input type="text" name="Title" ><br></h3>
             <h3>TEXTBOX : <input type="text" name="Description"><br></h3>
             <h3>DATE : <input type="date" name="Date"><br></h3>
-            <button>SEND</button>
+            <button type="submit">SEND</button>
     </form>
 
 </body>
