--- a/templates/Doctor/update_prescription.html
+++ b/templates/Doctor/update_prescription.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>update prescription</title>
 </head>
 <body>
     <form action="/update_prescription/{{ prescription.id }}/" method="post">
         {% csrf_token %}
         <h1>UPDATE PRESCRIPTION</h1>
         USERNAME : <select name="Userid">
-            {% for i in users %}
-            <option value="{{ i.Userid.id }}" {% if i.Userid.id == prescription.Userid.id %}selected{% endif %}>{{ i.Userid.Name }}</option>
+            {% for i in user_obj %}
+            <option value="{{ i.Userid.id }}" {% if i.Userid.id == prescription.Userid.id %}selected{% endif %}>{{ i.Name }}</option>
             {% endfor %}
         </select></br>
         PRESCRIPTION : <textarea name="prescription">{{prescription.prescription}}</textarea><br></br>
